--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.bdlabs_linku.linku" >
 
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <!--
+ <meta-data android:name="com.google.android.gms.version"
+ android:value="@integer/google_play_services_version" />
+    -->
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -31,12 +37,7 @@
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="EventsActivity" />
-            </activity>
+        </activity>
     </application>
-
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-<!--    <meta-data android:name="com.google.android.gms.version"
- android:value="@integer/google_play_services_version" />
- -->
 
 </manifest>
