--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,7 @@
 
 app/src/debug/res/values/key.xml
 app/src/release/res/values/key.xml
+
+app/app-release.apk
+
+app/manifest-merger-release-report.txt
