--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
         </activity>
         <activity
             android:name=".ViewEventActivity"
-            android:label="@string/title_activity_view_event"
+            android:label=""
+            android:theme="@style/AppThemeNoActionBar"
             android:parentActivityName=".EventsActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
