--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,11 @@
+.idea/
 .gradle
+/*/local.properties
+/*/out
+/*/*/build
+/*/*/production
+*.iml
 /local.properties
-/.idea/workspace.xml
-/.idea/libraries
 .DS_Store
 /build
 
