--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,15 +29,12 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="EventsActivity" />
         </activity>
-        <activity
-                android:name=".LoginActivity"
-                android:label="@string/title_activity_login"
-                android:screenOrientation="portrait" />
 
         <activity
                 android:name=".SignUpActivity"
                 android:label="@string/title_activity_signup"
-                android:screenOrientation="portrait" />
+            android:theme="@style/AppThemeNoActionBar"
+            android:screenOrientation="portrait" />
         <activity
                 android:name=".DispatchActivity"
                 android:noHistory="true" >
@@ -47,10 +44,10 @@
             </intent-filter>
         </activity>
         <activity
-                android:name=".WelcomeActivity"
-                android:label="@string/app_name"
-                android:screenOrientation="portrait"
-                android:theme="@android:style/Theme.Holo" />
+            android:name=".WelcomeActivity"
+            android:label="@string/app_name"
+            android:theme="@style/AppThemeNoActionBar"
+            android:screenOrientation="portrait"/>
 
         <meta-data
             android:name="com.google.android.gms.version"
