--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".EventsActivity"
-            android:label="@string/app_name" >
+            android:name=".EventsActivity">
         </activity>
         <activity
             android:name=".ViewEventActivity"
@@ -31,10 +30,14 @@
         </activity>
 
         <activity
-                android:name=".SignUpActivity"
-                android:label="@string/title_activity_signup"
-            android:theme="@style/AppThemeNoActionBar"
-            android:screenOrientation="portrait" />
+            android:name=".SignUpActivity"
+            android:label=""
+            android:screenOrientation="portrait"
+            android:parentActivityName=".WelcomeActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="WelcomeActivity" />
+        </activity>
         <activity
                 android:name=".DispatchActivity"
                 android:noHistory="true" >
