--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,10 +33,11 @@
             android:name=".SignUpActivity"
             android:label=""
             android:screenOrientation="portrait"
-            android:parentActivityName=".WelcomeActivity">
+            android:theme="@style/AppTheme.Dark"
+            android:parentActivityName=".LoginActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="WelcomeActivity" />
+                android:value=".LoginActivity" />
         </activity>
         <activity
                 android:name=".DispatchActivity"
@@ -47,8 +48,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".WelcomeActivity"
-            android:label="@string/app_name"
+            android:name=".LoginActivity"
             android:theme="@style/AppThemeNoActionBar"
             android:screenOrientation="portrait"/>
 
