--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,9 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".EventsActivity">
+            android:name=".EventsActivity"
+            android:clearTaskOnLaunch="true"
+            android:launchMode="singleTop">
         </activity>
         <activity
             android:name=".ViewEventActivity"
