--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,9 +23,10 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
     compile "com.android.support:appcompat-v7:21.0.3"
-    compile 'com.google.android.gms:play-services:6.5.87'
     compile 'com.android.support:cardview-v7:21.0.3'
 
-    compile 'com.getbase:floatingactionbutton:1.6.0'
+    compile 'com.google.android.gms:play-services:6.5.87'
 
+    compile 'com.getbase:floatingactionbutton:1.6.0'
+    compile 'com.github.bumptech.glide:glide:3.5.2'
 }
