--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 21
-    buildToolsVersion "21.1.2"
+    buildToolsVersion "21.1.1"
 
     defaultConfig {
         applicationId "com.bdlabs_linku.linku"
@@ -24,7 +24,7 @@ dependencies {
 
     compile "com.android.support:appcompat-v7:21.0.3"
     compile 'com.google.android.gms:play-services:6.5.87'
-    compile 'com.android.support:cardview-v7:21.0.3'
+    compile 'com.android.support:cardview-v7:21.0.+'
 
     compile 'com.getbase:floatingactionbutton:1.6.0'
 
