--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,7 @@ android {
         targetSdkVersion 21
         versionCode 1
         versionName "0.3"
+        testApplicationId "com.bdlabs_linku.tests"
     }
     buildTypes {
         release {
