--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -83,6 +83,9 @@
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="@string/google_maps_key" />
+        <instrumentation
+                android:targetPackage="com.bdlabs_linku.linku"
+                android:name="android.test.InstrumentationTestRunner" />
     </application>
 
 
