--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,14 +8,22 @@ android {
         applicationId "com.bdlabs_linku.linku"
         minSdkVersion 15
         targetSdkVersion 22
-        versionCode 3
-        versionName "0.3.4"
+        versionCode 4
+        versionName "0.3.6"
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+}
+
+repositories {
+    mavenCentral()
+
+    maven {
+        url "http://dl.bintray.com/journeyapps/maven"
     }
 }
 
@@ -30,4 +38,8 @@ dependencies {
 
     compile 'com.getbase:floatingactionbutton:1.6.0'
     compile 'com.github.bumptech.glide:glide:3.5.2'
+
+    compile 'com.journeyapps:zxing-android-embedded:2.3.0@aar'
+    compile 'com.journeyapps:zxing-android-integration:2.3.0@aar'
+    compile 'com.google.zxing:core:3.2.0'
 }
