--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,27 +24,39 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
+            android:name=".BaseActivity"
+            android:label="@string/title_activity_base"
+            android:theme="@style/AppThemeNoActionBar" >
+        </activity>
+        <activity
             android:name=".EventsActivity"
             android:clearTaskOnLaunch="true"
-            android:launchMode="singleTop" >
+            android:launchMode="singleTop"
+            android:theme="@style/AppThemeNoActionBar" >
+        </activity>
+        <activity
+            android:name=".BrowseEventsActivity"
+            android:clearTaskOnLaunch="true"
+            android:launchMode="singleTop"
+            android:theme="@style/AppThemeNoActionBar" >
         </activity>
         <activity
             android:name=".ViewEventActivity"
             android:label=""
-            android:parentActivityName=".EventsActivity"
+            android:parentActivityName=".BrowseEventsActivity"
             android:theme="@style/AppThemeNoActionBar" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="EventsActivity" />
+                android:value="BrowseEventsActivity" />
         </activity>
         <activity
             android:name=".CreateNewEventActivity"
             android:label="@string/title_activity_create_new_event"
-            android:parentActivityName=".EventsActivity"
+            android:parentActivityName=".BrowseEventsActivity"
             android:theme="@style/AppTheme.Dark" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".EventsActivity" />
+                android:value=".BrowseEventsActivity" />
         </activity>
         <activity
             android:name=".EditEventActivity"
@@ -59,7 +71,8 @@
             android:name=".SignUpActivity"
             android:label=""
             android:parentActivityName=".LoginActivity"
-            android:screenOrientation="portrait" >
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".LoginActivity" />
@@ -76,10 +89,11 @@
         <activity
             android:name=".AboutActivity"
             android:label="@string/title_activity_about"
-            android:parentActivityName=".EventsActivity" >
+            android:parentActivityName=".BrowseEventsActivity"
+            android:theme="@style/AppThemeNoActionBar" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".EventsActivity" />
+                android:value=".BrowseEventsActivity" />
         </activity>
         <activity
             android:name=".LoginActivity"
@@ -90,6 +104,11 @@
             android:label="@string/title_activity_welcome" >
         </activity>
 
+        <activity
+            android:name=".CreateEditEventActivity"
+            android:label="@string/title_activity_create_edit_event"
+            android:theme="@style/AppThemeNoActionBar" />
+
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
@@ -99,14 +118,6 @@
 
 
 
-        <activity
-            android:name=".BaseActivity"
-            android:label="@string/title_activity_base" >
-        </activity>
-
-
     </application>
-
-
 
 </manifest>
